# HyperSnitch

./: .env.dist  .gitignore  NOTES.md  README.md  config.toml  deploy.toml  deploy_app.py  main.py  pyproject.toml
.ssh/: id_rsa  id_rsa.pub
src/conf/: conf_classes.py  conf_parser.py  path_manager.py
src/controller/: executor.py
src/deployment/conf/: conf_classes.py  conf_loader.py
src/deployment/controller/: api_wrapper.py  resource_controller.py
src/deployment/smtp_server/: dns_helper.sh  smtp_install.sh
src/deployment/systemd/: hypersnitch.service
src/deployment/utils/: ssh_utils.py
src/main/conf/: conf_classes.py  conf_parser.py
src/main/controller/: executor.py
src/main/events/: result.py
src/main/notifier/: smtp.py
src/main/scanning/: scanner.py
src/main/scraping/: scraper.py  status.py
src/main/utils/: deploy.py  domain.py  logger.py  singleton.py  ssh_utils.py
src/utils/: logger.py  path_manager.py
